--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body class="flex justify-center items-center h-screen m-auto bg-[#f1f5f9]">
     <div class="flex items-center justify-center gap-10">
       <img
-        src="../assests/CAT-PET.png"
+        src="https://cdn.pixabay.com/photo/2016/02/10/16/37/cat-1192026_1280.jpg"
         alt="Loading..."
         id="firstImage"
         class="w-70 h-70 rounded-2xl bg-cover"
@@ -21,7 +21,7 @@
         Swap Image
       </button>
       <img
-        src="../assests/DOG-PET.png"
+        src="https://cdn.pixabay.com/photo/2021/01/21/16/17/english-cocker-spaniel-5937757_1280.jpg"
         alt="Loading..."
         id="secondImage"
         class="w-70 h-70 rounded-2xl"
